--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,14 @@
         "io.h": "c",
         "iom32u4.h": "c",
         "stdbool.h": "c",
-        "interrupt.h": "c"
+        "interrupt.h": "c",
+        "hidreport.h": "c",
+        "rb3-midi-adapter.h": "c",
+        "usb.h": "c",
+        "usbinterrupt.h": "c",
+        "usbinterrupt_avr8.h": "c",
+        "string.h": "c",
+        "hidclassdevice.h": "c",
+        "leds.h": "c"
     }
 }
